# prompt-hyperopt

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
examples/: minimal_sentiment_analysis.py  sentiment_analysis_tiny.py
prompt_hyperopt/: __init__.py  __init__py  configurationspace.py  dataseteval.py  datasets.py  gpt.py  optimization.py  sampleevaluation.py  templatedprompt.py  test_gpt.py  test_greedy.py  test_optimizedprompt.py  test_sampleevaluation.py  test_templatedprompt.py
