[metadata]
name=prompt-hyperopt
version=0.1.0
license_file=LICENSE
description=Reliable language-model prompts through templates, calibration, and hyperparameter optimization
long_description=file: README.md
long_description_content_type=text/markdown
url=https://github.com/Mavenoid/prompt-hyperopt
author=
    Mavenoid
    Cenny Wenner
author_email=info@mavenoid.com
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing :: Linguistic
    Topic :: Utilities
keywords=algorithm, configuration, hyperparameter optimization, machine learning, natural language processing

[options]
packages = find:
include_package_data=True 
install_requires = file: requirements.txt

[options.packages.find]
exclude =
    examples

[options.extras_require]
dev = 
    black==22.10.0
    pytest==3.0.9
    tox==3.27.0

[options.package_data]
* = *.md
