[metadata]
name=prompt-hyperopt
version=0.1.0
license_file=LICENSE
description=Reliable language-model prompts through templates, calibration, and hyperparameter optimization
url=https://github.com/Mavenoid/prompt-hyperopt
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing :: Linguistic
    Topic :: Utilities
keywords=algorithm, configuration, hyperparameter optimization, machine learning, natural language processing
project_urls=
    Source=https://github.com/Mavenoid/prompt-hyperopt
    Tracker=https://github.com/Mavenoid/prompt-hyperopt/issues
    Funding=https://www.mavenoid.com


[options]
packages = find:
include_package_data=True 
install_requires =
    datasets>=2.6
    transformers>=4.10
    configspace>=0.6
    scipy>=1.9
    openai>=0.24
    jinja2>=1.2
    torch>=1.13
    torchvision
    torchaudio

[options.packages.find]
exclude =
    .env
    examples

[options.extras_require]
dev =
    black>=22.10.0
    pytest>=3.0
    tox>=3.27
    tox-gh-actions>=2.10
    flake8>=5.0
    flake8-bugbear>=22.10

[options.package_data]
* = *.md, *.txt
